<resources>
    <string name="app_name">Find Your Doctor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_start">ပင်မစာမျက်နှာ</string>
    <string name="title_physicians">ဆရာဝန်များ</string>
    <string name="title_medical_checkup">ကျန်းမာရေးအစီအစဉ်များ</string>
    <string name="title_hospital_contacts">ဆေးရုံများ</string>
    <string name="title_recommendation">အကြံပြုချက်များ</string>

    <string name="google_map_text"><u>Google Map တွင် ကြည့်ရန် နှိပ်ပါ </u></string>

</resources>