<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    <item-->
    <!--        android:id="@+id/navigation_home"-->
    <!--        android:icon="@drawable/ic_home_black_24dp"-->
    <!--        android:title="@string/title_home" />-->

    <!--    <item-->
    <!--        android:id="@+id/navigation_dashboard"-->
    <!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
    <!--        android:title="@string/title_dashboard" />-->

    <!--    <item-->
    <!--        android:id="@+id/navigation_notifications"-->
    <!--        android:icon="@drawable/ic_notifications_black_24dp"-->
    <!--        android:title="@string/title_notifications" />-->

    <item
        android:id="@+id/navigation_start"
        android:icon="@drawable/ic_bottom_nav_home"
        android:title="@string/title_start" />

    <item
        android:id="@+id/navigation_find_specialists"
        android:icon="@drawable/ic_bottom_nav_doctor"
        android:title="@string/title_physicians" />

    <item
        android:id="@+id/navigation_medicalCheckupPackagesByHospital"
        android:icon="@drawable/ic_bottom_nav_checkup"
        android:title="@string/title_medical_checkup" />

    <item
        android:id="@+id/navigation_hospital_contacts"
        android:icon="@drawable/ic_bottom_nav_hospital"
        android:title="@string/title_hospital_contacts" />

    <item
        android:id="@+id/navigation_recommend_suggest"
        android:icon="@drawable/ic_bottom_nav_recommend"
        android:title="@string/title_recommendation" />

</menu>